Bundle test